--- a/views/Employee.pug
+++ b/views/Employee.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1= title
-  - var results = [{"Employee_Name": "Raghava","Employee_Salary":4000,"Employee_Id": 554035,"Employee_Department":"ACS"},{"Employee_Name": "Venakt","Employee_Salary":4300,"Employee_Id": 554075,"Employee_Department":"ACS"},{"Employee_Name": "Ajay","Employee_Salary":4030,"Employee_Id": 554025,"Employee_Department":"ACS"},{"Employee_Name": "Manoj","Employee_Salary":4200,"Employee_Id": 554015,"Employee_Department":"ACS"}]
+  - var results = Emp_results
   div.container-fluid 
     div.row 
         each item, index in results
