--- a/views/Employee.pug
+++ b/views/Employee.pug
@@ -16,5 +16,19 @@ block content
       alert("Employee index" + index)
     } 
     function dispatch(path){ 
-      window.location.href=path 
-    } 
+      window.location.href=path;
+    }
+      passport.use(new LocalStrategy( 
+       function(username, password, done) { 
+        Account.findOne({ username: username }, function (err, user) { 
+        if (err) { return done(err); } 
+        if (!user) { 
+          return done(null, false, { message: 'Incorrect username.' }); 
+        } 
+        if (!user.validPassword(password)) { 
+          return done(null, false, { message: 'Incorrect password.' }); 
+        } 
+        return done(null, user); 
+      });
+    }
+    ));
