--- a/views/index.pug
+++ b/views/index.pug
@@ -1,16 +1,13 @@
-extends layout
 
-block content
-  h1= title
-  p Welcome to #{title}
-  P this is assignment 10
-  button(type='button',class='btn btn-success',onclick="doBump()") Press Me 
-  div#bump Bump the count 
-  script.
-    let count=0;
-    let bump=1;
-    function doBump(){
-      count=count+bump
-      bump=bump+1
-      document.getElementById('bump').innerHTML= "Count "+ count +" Bump "+bump;
-    };
+extends layout 
+ 
+block content 
+  if (!user) 
+    a(href="/login") Login 
+    br 
+    a(href="/register") Register 
+  if (user) 
+    p You are currently logged in as #{user.username} 
+    a(href="/Employee") Take me to Employee 
+    br 
+    a(href="/logout") Logout 
