--- a/views/Employee.pug
+++ b/views/Employee.pug
@@ -2,13 +2,16 @@ extends layout
 
 block content
   h1= title
+  button.btn( class="btn-primary ml-1", onclick= `dispatch(\"/Employee/create\")` ) create 
   - var results = Emp_results
   div.container-fluid 
     div.row 
         each item, index in results
           - let destination = `dispatch(\"/Employee/update?id=${item._id}\")` 
             div.col-sm-2(onclick=`buy(${index})`) Emp Name: #{item["Employee_Name"]} <br> Emp Salary: #{item["Employee_Salary"]} <br> Emp Id: #{item["Employee_Id"]} <br> Emp Department: #{item["Employee_Department"]}
-            button.btn( class="btn-primary ml-1", onclick= destination) Update
+            button.btn( class="btn-primary ml-1", onclick= `dispatch(\"/Employee/update?id=${item._id}\")` ) Update
+            button.btn( class="btn-primary ml-1", onclick= `dispatch(\"/Employee/view?id=${item._id}\")` ) view
+            button.btn( class="btn-primary ml-1", onclick= `dispatch(\"/Employee/delete?id=${item._id}\")` ) delete
 
 
   script.
